--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,4 +1,5 @@
 
+/*My CSS*/
 /*Landing Page CSS*/
 #backgroundVideo {
 	position: fixed;
@@ -116,7 +117,7 @@ input:focus {
   font-size: 1.7em;
   text-align: center;
 }
-
+  
 .form-title span {
   color: rgba(0, 0, 0, 0.4);
   opacity: 0;
