--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,17 @@
 
-/*My CSS*/
+
+/*Colors*/
+/*I looked up some design inspirations, and thought this color combo would be nice*/
+/* #CBC5C1 CASHMERE */ 
+/* #A2AAB0 FRENCH BLUE */
+/* #EBECED WHITE WASH */
+/* #4C586F DENIM */
+/* #3E3E3B GUNMETAL */
+
+
+body {
+  background-color: #CBC5C1;
+}
 /*Landing Page CSS*/
 #backgroundVideo {
 	position: fixed;
@@ -10,14 +22,14 @@
 }
 .content {
 	position: fixed;
-	bottom: 25%;
-	margin: 0 15%;
+	bottom: 19%;
+	margin: 0 5%;
 	padding: 0;
 	color: #f1f1f1;
-	width: 70%;
+	width: 90%;
 }
 .jumbotron {
-  background-color: #6b92a4;
+  background-color: #4C586F;
   border-radius: 25px;
 }
 .fun-button {
@@ -26,9 +38,9 @@
      -moz-appearance: none;
           appearance: none;
   background-color: transparent;
-  border: 2px solid #e74c3c;
+  border: 2px solid #f1f1f1;
   border-radius: 0.6em;
-  color: #e74c3c;
+  color: #f1f1f1;
   cursor: pointer;
   display: block;
   align-self: center;
@@ -42,13 +54,13 @@
   font-weight: 700;
 }
 .fun-button:hover, .fun-button:focus {
-  color: #fff;
+  color: #f1f1f1;
   outline: 0;
 }
 .landing-button {
-  border-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.8) 50%, transparent 50%);
+  border-color: #f1f1f1;
+  color: #f1f1f1;
+  background-image: linear-gradient(45deg, #A2AAB0 50%, transparent 50%);
   background-position: 100%;
   background-size: 400%;
   transition: background 300ms ease-in-out;
@@ -86,8 +98,13 @@ input:focus {
 /*End Landing Page CSS*/
 
 /*login / sign up page css*/
+/* #CBC5C1 CASHMERE */ 
+/* #A2AAB0 FRENCH BLUE */
+/* #EBECED WHITE WASH */
+/* #4C586F DENIM */
+/* #3E3E3B GUNMETAL */
 #login-body {
-  background-color: #6b92a4;
+  background-color: #A2AAB0;
 }
 
 .form-container {
@@ -110,16 +127,16 @@ input:focus {
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: 500px;
-  background-color: #6b92a4;
+  background-color: #4C586F;
 }
 .form-title {
-  color: #fff;
+  color: #4C586F;
   font-size: 1.7em;
   text-align: center;
 }
   
 .form-title span {
-  color: rgba(0, 0, 0, 0.4);
+  color: #4C586F;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.3s ease;
@@ -129,7 +146,7 @@ input:focus {
   border: 0;
   outline: none;
   box-shadow: none;
-  color: black;
+  color: #4C586F;
   display: block;
   height: 30px;
   line-height: 30px;
@@ -160,7 +177,7 @@ input:focus {
 
 .submit-btn:hover {
   transition: all 0.3s ease;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #4C586F;
 }
 
 .login {
@@ -199,13 +216,13 @@ input:focus {
 }
 
 .form-title {
-  color: #000;
+  color: #4C586F;
   font-size: 1.7em;
   text-align: center;
 }
 
 .form-title span {
-  color: rgba(0, 0, 0, 0.4);
+  color: #4C586F;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all 0.3s ease;
@@ -233,6 +250,7 @@ input:focus {
   border-bottom: 1px solid #eee;
   width: 100%;
   font-size: 12px;
+  color: #4C586F;
 }
 
 .form-holder .input:last-child {
@@ -240,11 +258,11 @@ input:focus {
 }
 
 .form-holder .input::-webkit-input-placeholder {
-  color: rgba(0, 0, 0, 0.4);
+  color: #4C586F;
 }
 
 .submit-btn {
-  background-color: #6b92a4;
+  background-color: #4C586F;
   color: rgba(256, 256, 256, 0.7);
   border: 0;
   border-radius: 15px;
@@ -263,3 +281,97 @@ input:focus {
   transition: all 0.3s ease;
   background-color: rgba(0, 0, 0, 0.8);
 }
+.user-id {
+  color: #4C586F;
+}
+/*End login / signup page CSS*/
+
+/*User Profile Page*/
+/* #CBC5C1 CASHMERE */ 
+/* #A2AAB0 FRENCH BLUE */
+/* #EBECED WHITE WASH */
+/* #4C586F DENIM */
+/* #3E3E3B GUNMETAL */
+#user-profile-body {
+  background-color: #A2AAB0;
+  color: #3E3E3B;
+}
+#user-profile-nav {
+  background-color: #4C586F;
+}
+#user-profile-nav a {
+  color: #EBECED;
+}
+#delete-event-button {
+  height: 50px;
+}
+#delete-event-button button {
+  height: 30px;
+  line-height: 15px;
+}
+.event-row {
+  background-color: #4C586F;
+  color: #EBECED;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+/*End User Profile Page*/
+
+/*Loader CSS*/
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 27px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background: #6b92a4;
+  animation-timing-function: cubic-bezier(.47, 2.06, -0.73);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 6px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 6px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 26px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 45px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(19px, 0);
+  }
+}
+/*End Loader CSS*/
