current working branch for ryan

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,3 +375,45 @@ input:focus {
   }
 }
 /*End Loader CSS*/
+
+/*add event css*/
+/*I looked up some design inspirations, and thought this color combo would be nice*/
+/* #CBC5C1 CASHMERE */ 
+/* #A2AAB0 FRENCH BLUE */
+/* #EBECED WHITE WASH */
+/* #4C586F DENIM */
+/* #3E3E3B GUNMETAL */
+
+/*add event css*/
+#add-event-body {
+  background-color: #ebeced;
+}
+#add-event-header {
+  padding: 0;
+  margin: 25px 20px;
+  font-size: 25px;
+  background-color: #4C586F;
+}
+#add-event-form {
+  padding: 0;
+  margin: 0% auto;
+  background-color: #4C586F;
+  color: white;
+}
+#add-event-body label {
+  margin: 0 25px;
+}
+#add-event-body input {
+  background-color: #ebeced;
+  width: 80%;
+  margin-left: 25px;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+#create-event {
+  margin: 10px 25px;
+}
+#event-description-input {
+  height: 200px;
+}
+/*end add event css*/
