--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,20 @@
 /* #EBECED WHITE WASH */
 /* #4C586F DENIM */
 /* #3E3E3B GUNMETAL */
-
-
 body {
   background-color: #CBC5C1;
+  font-family: 'News Cycle', sans-serif;
+  font-size: 20px;
 }
 /*Landing Page CSS*/
+#logo {
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 75px;
+}
+.pulled-image {
+  width: 600px;
+  height: 300px;
+}
 #backgroundVideo {
 	position: fixed;
 	right: 0;
@@ -94,6 +102,11 @@ input:hover {
 input:focus {
       background: none;
       outline: none;
+}
+#new-jumbo {
+  width: 49%;
+  margin: 0.5%;
+  text-align: center;
 }
 /*End Landing Page CSS*/
 
